# DiPs

./: .gitignore  Cargo.toml  Dockerfile.cross  README.md  build-cross.sh  setup-cross-compile.sh
.cargo/: config.toml
dips/: Cargo.toml  build.rs
dips-app/: index.html  package.json  pnpm-lock.yaml
dips-app/src/: main.ts  styles.css
dips-app/src-tauri/: Cargo.toml  tauri.conf.json
dips-app/src-tauri/src/: lib.rs  main.rs
dips-ffmpeg/: Cargo.toml
dips-ffmpeg/src/: frame_extractor.rs  lib.rs
dips-ffmpeg/src/gpu/: bind_groups.rs
dips.old/: Cross.toml
dips.old/dips/: Cargo.toml
dips.old/dips/src/: frame_extractor.rs  thumbnail_extractor.rs
dips.old/dips/src/gpu/: mod.rs
dips.old/dips/src/utils/: indexing.rs
dips.old/dips_alt/src/: help.txt
dips.old/dips_alt/src/dips_compute/: mod.rs
dips.old/dips_opencv/src/: thumbnail_extractor.rs
dips.old/entry/src/: main.rs
dips.old/opencv_tests/src/: main.rs
dips.old/test_scripts/: dft.py
dips.old/test_scripts/video_subsampler/: .gitignore
dips/src/: dips_run.rs  frame_extractor.rs  lib.rs  main.rs  thumbnail_extractor.rs
dips/src/gpu/: bind_groups.rs  mod.rs
dips/src/gpu/shaders/: dips_shader.wgsl  new_temporal_shader.wgsl  pre_compute_shader.wgsl  shader.wgsl  temporal_shader.wgsl
dips_alt/: Cargo.toml
dips_alt/src/: gpu_controller.rs  lib.rs  main.rs
dips_alt/src/dips_compute/: dynamic_texture_array.rs  mod.rs
dips_alt/src/dips_compute/shaders/: pre_compute_shader.wgsl  render.wgsl
dips_alt/src/gui/: mod.rs
dips_opencv/: Cargo.toml
dips_opencv/src/: frame_extractor.rs  lib.rs
entry/: Cargo.toml
entry/src/: main.rs
entry/ui/: app-window.slint
gstreamer_bindings/clib/: .gitignore  CMakeLists.txt
gstreamer_bindings/clib/include/: frame_extractor.h
gstreamer_bindings/clib/src/: frame_extractor.cpp
libdips/: Cargo.toml
libdips/src/: circular_index.rs  lib.rs  properties.rs  renderer.rs  window.rs
opencv_tests/: Cargo.toml
test_scripts/: image_denoise.py
test_scripts/video_subsampler/: vid_sub_sampler.py
(+4 files in other folders)
