[package]
name = "dips-ffmpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
image = "0.25.5"
# ffmpeg-next = { version = ">=4.4.0 , <5" , default-features = true, features = ["codec"] }
log = "0.4.26"
ndarray = "0.16.1"
pollster = "0.4.0"
video-rs = { version = "0.10.3", features = ["ndarray"] }
wgpu = "24.0.1"
