[package]
name = "dips"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
libdips = { path = "../libdips" }
opencv = { version = "0.95.1", features = ["clang-runtime"], optional = true }
pretty_env_logger = "0.5.0"
smol = "2.0.2"

[features]
default = ["opencv"]
opencv = ["dep:opencv"]
