[package]
name = "dips_alt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = "1.22.0"
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"
log = "0.4.27"
opencv = { version = "0.94.3", features = ["clang-runtime"] }
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
wgpu = "24.0.3"
winit = "0.30.9"
